force-app/main/default/objects/msmxSheet__SaveRecords__e/msmxSheet__SaveRecords__e.object-meta.xml
<CustomObject>
    <label>Mashmatrix Platform Event: Save Records</label>
</CustomObject>