force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__BookId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__BookId__c</fullName>
    <label>Book ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>