force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>