force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__OperationType__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__OperationType__c</fullName>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>