force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__SuccessRecordIds__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SuccessRecordIds__c</fullName>
    <label>Success Record IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>