force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__SuccessRecordNum__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SuccessRecordNum__c</fullName>
    <label>Num of Success Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>