force-app/main/default/objects/msmxSheet__SaveRecords__e/fields/msmxSheet__UserId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__UserId__c</fullName>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>